# stock-analysis-platform

./: .env  COMPREHENSIVE_FINANCIAL_INTERFACE_PLAN.md  COMPREHENSIVE_HISTORICAL_DATA_STORAGE.md  FRONTEND_MOCK_DATA_FIX.md  FUNDAMENTALS_FEATURE_SUMMARY.md  HISTORICAL_DATA_PERIODS_ANALYSIS.md  ML_OPTIMAL_TIMEFRAMES_ANALYSIS.md  MONGODB_STORAGE_SUMMARY.md  NSE_TOP_500_COMPREHENSIVE_TEST_REPORT.md  README.md  VARIANCE_ANALYSIS_FEATURE_SUMMARY.md  historical_data_manager.py  nse_test_results_20250719_085225.json  nse_test_results_20250719_085326.json  nse_test_results_20250719_085621.json  pyproject.toml  run_backend.py  test_imports.py  test_nse_stocks.py  verify_mongodb_storage.py
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  chat.py  stocks.py  websocket.py
app/core/: config.py  database.py  security.py
app/models/: chat.py  stock.py  user.py
app/services/: __init__.py  auth.py  chat_service.py  historical_data_service.py  industry_analysis_service.py  news_and_analyst_service.py  price_updater.py  stock_service.py  websocket_service.py
