[tool.poetry]
name = "stock-analysis-platform"
version = "0.1.0"
description = "Conversational Stock Analysis Platform with FastAPI and Next.js"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {version = ">=0.24.0", extras = ["standard"]}
motor = "^3.3.2"
beanie = "^1.24.0"
pymongo = "^4.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
httpx = "^0.25.2"
aiohttp = "^3.9.1"
pandas = "^2.1.4"
numpy = "^1.25.2"
yfinance = "^0.2.28"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
aioredis = "^2.0.1"
celery = {extras = ["redis"], version = "^5.3.4"}
structlog = "^23.2.0"
slowapi = "^0.1.9"
websockets = ">=12.0"
python-socketio = ">=5.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.7.1"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"